Made necessary HTML changes to challenge 2

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <h1>Welcome to HTML Tutorial</h1>
   <h3>First Challenge: <a href="first.html">Letter markup</a></h3>
+  <h3>Second Challenge: <a href="second.html">Birdwatching</a></h3>
 </body>
 </html>
