--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <h1>Welcome to HTML Tutorial</h1>
   <h3>First Challenge: <a href="first.html">Letter markup</a></h3>
   <h3>Second Challenge: <a href="second.html">Birdwatching</a></h3>
+  <h3>Third Challenge: <a href="third.html">Mozilla landing page</a></h3>
 </body>
 </html>
