--- a/third.html
+++ b/third.html
@@ -98,16 +98,14 @@
   </head>
   <body>
     <header>
+      <p>return <a href="index.html">home</a>.</p>
       <h1>Mozilla</h1>
-      <!-- insert <img> element, link to the small
-          version of the Firefox logo -->
-
+      <img src="public/firefox-logo120.png" alt="Firefox logo">
     </header>
 
     <main>
       <article>
-        <!-- insert iframe from youtube -->
-
+        <iframe width="400" height="225" src="https://www.youtube.com/embed/ojcNcvb1olg" frameborder="0" allowfullscreen></iframe>
         <h2>Rocking the free web</h2>
 
         <p>Mozilla are a global community of technologists, thinkers, and builders, working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
@@ -116,24 +114,40 @@
       </article>
 
       <div class="further-info">
-        <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+          <img srcset="public/firefox-logo120.png 120w,
+                       public/firefox-logo400.png 400w"
+               sizes="(max-width: 500px) 120px,
+                      400px"
+               src="firefox-logo400.png" alt="Download Firefox">
         </a>
         <a href="https://www.mozilla.org/">
-          <img>
+          <img srcset="public/mozilla-dinosaur120.png 120w,
+                       public/mozilla-dinosaur400.png 400w"
+               sizes="(max-width: 500px) 120px,
+                      400px"
+               src="public/mozilla-dinosaur400.png" alt="Learn more about Mozilla">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img srcset="public/firefox-addons120.jpg 120w,
+                       public/firefox-addons400.jpg 400w"
+               sizes="(max-width: 500px) 120px,
+                      400px"
+               src="public/firefox-addons400.jpg" alt="Customize Firefox with add-ons">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img  src="public/mdn.svg" role="img" alt="Learn web development with MDN">
         </a>
         <div class="clearfix"></div>
       </div>
 
       <div class="red-panda">
-        <!-- insert picture element -->
+
+
+        <picture>
+          <source media="(max-width: 600px)" srcset="public/red-panda-portrait-small.jpg">
+          <img src="public/red-panda-landscape.jpg" alt="a red panda">
+        </picture>
       </div>
 
     </main>
