Fixed landing page according to assignment requirements

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
   <title>HTML Tutorial - Johan Hernandez</title>
 </head>
 <body>
-  <h1>Welcome to HTML Tutorial</h1>
-  <h3>First Challenge: <a href="first.html">Letter markup</a></h3>
-  <h3>Second Challenge: <a href="second.html">Birdwatching</a></h3>
-  <h3>Third Challenge: <a href="third.html">Mozilla landing page</a></h3>
+  <header>
+    <h1>HTML Tutorial</h1>
+    <h2>By Johan Hernandez</h2>
+    <h3>Challenges:</h3>
+    <ol>
+      <li><a href="first.html">Letter markup</a></li>
+      <li><a href="second.html">Birdwatching</a></li>
+      <li><a href="third.html">Mozilla splash page</a></li>
+    </ol>
+  </header>
 </body>
 </html>
