--- a/first.html
+++ b/first.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Tutorial - Johan Hernandez</title>
+  <title>Letter markup</title>
 </head>
 <body>
   <h1>Welcome to the first challenge, <em>Letter markup</em>.</h1>
